added Yolo object detection

--- a/Text Summarizer/app/templates/index.html
+++ b/Text Summarizer/app/templates/index.html
@@ -64,7 +64,7 @@
         <div class="input-field col s12 m10">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">chrome_reader_mode</i></h2>
-           <form method="POST" action="/analyze">
+           <form method="POST" action="/test/analyze_url">
          <textarea name="rawtext" cols="3" rows="5" class="form-control" required="true" placeholder="Enter Text Here"></textarea>
           
          <br/>
@@ -81,7 +81,7 @@
         <div class="input-field col s12 m10">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">chrome_reader_mode</i></h2>
-           <form method="POST" action="/analyze_url">
+           <form method="POST" action="/test/analyze_url">
          <input type="text" name="raw_url" placeholder="Enter URL Here" required="true">
          <button class="btn btn-small waves-effect waves-light light-blue lighten-1" type="reset">Clear</button>
           <button class="btn btn-small waves-effect waves-light purple lighten-1" type="submit">Summarize</button>
